--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Rowan Botha
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Cyber Security Analyst
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://github.com/Sp3ctralM0nki3/sp3ctralm0nki3.github.io/blob/master/images/sp3ctrlm0nki3.jpg
 
 #
 # Flags below are optional
