--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: Sp3ctralM0nki3/sp3ctralm0nki3.github.io
   instagram:
   linkedin:
   pinterest:
